@@ -1,0 +1,10 @@
+BUGS - Reported but not added to the bugtracker:
+
+ TODO: From forum posting: http://bblog.com/forum/viewtopic.php?t=2328
+   bBlog installer does not escape strings
+   
+ FEATURE: forum posting http://bblog.com/forum/viewtopic.php?t=2603
+   addinng comment URL to RSS feeds
+   
+ BUG:
+Investigate ways to make clean urls work without .htaccess files
