@@ -15,12 +15,12 @@
     <table cellpadding="0" cellspacing="0" class="list">
         <tr>
             <th style="width:33%">Number of posts</th>
-            <td><input type="text" class="text" name="num" value="10"/></td>
+            <td><input type="text" class="text" name="f_posts" value="10"/></td>
         </tr>
         <tr>
             <th style="width:33%">Section</th>
             <td>
-                <select name="sectionid">
+                <select name="f_section">
                     <option value="0">All</option>
                     {$sectionlist}
                 </select>
@@ -29,7 +29,7 @@
         <tr>
             <th style="width:33%">Feed Version</th>
             <td>
-                <select name="version">
+                <select name="f_type">
                     <option value="RSS0.92">RSS 0.92</option>
                     <option value="RSS1.0">RSS 1.0</option>
                     <option value="RSS2.0">RSS 2.0</option>
