@@ -1,0 +1,29 @@
+<?php
+/* Loquacity - A web blogging application with simplicity in mind - http://www.loquacity.info/
+ * Copyright (C) 2006 Kenneth Power <telcor@users.berlios.de>
+ *
+ * This file is part of Loquacity.
+ *
+ * Loquacity is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * Loquacity is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Loquacity; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+
+include_once('bblog/config.php');
+$type = strtoupper($_GET['ft']);
+if(in_array($type, $types)){
+    include_once('lib/feedhandler.class.php');
+    $fh = new FeedHandler(&$bBlog->_adb);
+    $fh->generate();
+}
+?>
